--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@typescript-eslint/parser": "^4.31.0",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.3.2",
     "typescript": "^4.4.2"
   }
 }
