--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,8 @@
   "rules": {
     "import/prefer-default-export": "off",
     "no-console": "off",
+    "no-unused-vars": "off",
+    "no-shadow": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
