--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
+    // "no-warning-comments": [1, { "terms": ["todo"], "location": "start" }],
     "import/prefer-default-export": "off",
     "no-console": "off",
     "no-unused-vars": "off",
