--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chinsun9/ts-repo-template.git"
+    "url": "git+https://github.com/{username}/{reponame}.git"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/chinsun9/ts-repo-template/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/chinsun9/ts-repo-template#readme",
+  "homepage": "",
   "devDependencies": {
     "@types/node": "^16.7.13",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
